--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.application.name=weatherAPI
-server.port=8080
+spring.application.name=${SPRING.APPLICATION.NAME:weatherAPI}
+server.port=${SERVER_PORT:8080}
+
